--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,13 @@ license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = { version = "1", default-features = false }
-hex = { version = "0.4", defualt-features = false }
-num-bigint = "0.4"
-once_cell = "1.8"
+thiserror = { version = "1", optional = true }
+hex = { version = "0.4", default-features = false }
+num-bigint = { version = "0.4", default-features = false }
+once_cell = { version = "1.8", default-features = false }
 tracing = { version = "0.1", optional = true }
 tracing-subscriber = { version = "0.2", optional = true }
-anyhow = { version = "1.0", defualt-features = false }
+anyhow = { version = "1.0", optional = true }
 ark-relations = "0.4"
 ark-r1cs-std = { version = "0.4", optional = true, default-features = false }
 ark-std = { version = "0.4", default-features = false }
@@ -30,13 +30,31 @@ ark-ed-on-bls12-377 = { version = "0.4", features = ["r1cs"] }
 ark-groth16 = { version = "0.4", default-features = false, optional = true }
 ark-snark = { version = "0.4", optional = true }
 zeroize = "1.4"
+no-std-compat = "0.4.1"
 
 # This matches what ark-std (a library for no_std compatibility) does, having
 # a default feature of std - without the ark-std std feature, decaf377 doesn't
 # compile
 [features]
-default = ["std"]
-std = ["ark-std/std", "tracing", "tracing-subscriber"]
+std = [
+    "ark-std/std",
+    "tracing",
+    "tracing-subscriber",
+    "anyhow/std",
+    "hex/std",
+    "once_cell/std",
+    "num-bigint/std",
+    "thiserror",
+    "tracing",
+    "tracing-subscriber",
+    "no-std-compat/std",
+    "thiserror",
+    "anyhow",
+]
+
+default = ["std", "alloc"]
+
+alloc = []
 parallel = [
     "ark-ff/parallel",
     "ark-ec/parallel",
